--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ canvas{
   top: 48px;
   left: 0;
   width: 80px;
-  color: #13E8E9;
+  color: #07d300;
   font-size: .8em;
   text-align: left;
   text-indent: 4px;
@@ -88,7 +88,7 @@ canvas{
 #particles-js{
   width: 100%;
   height: 100%;
-  background-color: #b61924;
+  background-color: #000000;
   background-image: url('');
   background-size: cover;
   background-position: 50% 50%;
